--- a/index.html
+++ b/index.html
@@ -14,68 +14,74 @@
 }
 
 body {
-    height: 100vh;
     background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    color: white;
+    text-align: center;
+    overflow-x: hidden;
+}
+
+/* Layout */
+section {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-    text-align: center;
-    color: white;
+    padding: 40px;
 }
 
 .container {
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(15px);
     background: rgba(255,255,255,0.1);
     padding: 40px;
     border-radius: 30px;
-    box-shadow: 0 25px 50px rgba(0,0,0,0.25);
-    max-width: 650px;
+    box-shadow: 0 25px 60px rgba(0,0,0,0.3);
+    max-width: 750px;
     animation: fadeIn 1.5s ease;
 }
 
 h1 {
-    font-size: 2.7rem;
-    margin-bottom: 20px;
+    font-size: 2.8rem;
+    margin-bottom: 15px;
     animation: float 3s ease-in-out infinite;
 }
 
+h2 { margin: 15px 0; }
+
 p {
-    font-size: 1.2rem;
-    margin-bottom: 25px;
     line-height: 1.7;
+    margin-bottom: 15px;
 }
 
+/* Buttons */
 button {
-    padding: 12px 22px;
-    border: none;
+    padding: 10px 20px;
     border-radius: 25px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: 0.3s ease;
+    border: none;
     font-weight: bold;
+    cursor: pointer;
     margin: 8px;
+    transition: 0.3s;
 }
 
-.yes-btn {
+button:hover {
+    transform: scale(1.1);
+}
+
+.primary {
     background: white;
     color: #ff4d6d;
 }
 
-.yes-btn:hover {
-    transform: scale(1.1);
-    background: #ffe6ec;
-}
-
-.no-btn {
+.dark {
     background: #222;
     color: white;
     position: relative;
 }
 
+/* Love Meter */
 .love-meter {
-    margin-top: 20px;
-    height: 20px;
+    margin-top: 15px;
+    height: 18px;
     width: 100%;
     background: rgba(255,255,255,0.3);
     border-radius: 20px;
@@ -89,22 +95,17 @@ button {
     transition: width 1s ease;
 }
 
-.hidden-message {
-    margin-top: 20px;
-    font-size: 1.3rem;
-    display: none;
-    animation: fadeIn 1.5s ease forwards;
-}
-
+/* Floating Hearts */
 .heart {
-    position: absolute;
-    font-size: 22px;
-    animation: fall linear infinite;
+    position: fixed;
+    font-size: 20px;
+    animation: floatUp linear infinite;
+    opacity: 0.8;
 }
 
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
+@keyframes floatUp {
+    from { transform: translateY(100vh); }
+    to { transform: translateY(-10vh); }
 }
 
 @keyframes float {
@@ -113,81 +114,168 @@ button {
     100% { transform: translateY(0px); }
 }
 
-@keyframes fall {
-    0% { transform: translateY(-10vh); opacity: 1; }
-    100% { transform: translateY(110vh); opacity: 0; }
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
+
+.hidden { display: none; }
+
+.slider { width: 80%; }
+
 </style>
 </head>
 
 <body>
 
+<!-- MAIN SECTION -->
+<section>
 <div class="container">
-    <h1>Ghada 💖 (aka my baby:3)</h1>
 
-    <p>
-        Dear Ghadoush,<br><br>
-        If being cute was illegal, you'd be serving life.  
-        If stealing hearts was a crime, Mr. Vampire would be jealous of you. 🧛‍♂️  
-        And honestly? I wanna bite you
-    </p>
+<h1>Ghada 💖 (aka my Ghadoush:3)</h1>
 
-    <p>
-        Question of the century:
-    </p>
+<p>
+Dear Ghadoush,<br><br>
+If being cute was illegal, you'd be serving life.  
+If stealing hearts was a crime, Mr. Vampire would file a complaint. 🧛‍♂️  
+And honestly? I still wanna bite you (respectfully).  
+</p>
 
-    <h2>Do you love me:3</h2>
+<h2>Do you love me:3</h2>
 
-    <button class="yes-btn" onclick="showLove()">Yes (Correct Answer)</button>
-    <button class="no-btn" id="noBtn">No (Illegal Option)</button>
+<button class="primary" onclick="acceptLove()">Yes (Correct Answer)</button>
+<button class="dark" id="noBtn">No (Illegal Option)</button>
 
-    <div class="love-meter">
-        <div class="love-fill" id="loveFill"></div>
-    </div>
-
-    <div class="hidden-message" id="loveMessage">
-        Ghadoush…  
-        You are my favorite notification,  
-        my safest place,  
-        and the only fairy I trust with my heart:3
-
-        Even if Mr. Vampire tries to compete,  
-        he knows I already chose you.  
-
-        I love you more than code, life, and mtn dew.  
-        And that is scientifically concerning.❤️
-    </div>
+<div class="love-meter">
+<div class="love-fill" id="loveFill"></div>
 </div>
 
-<script>
-const noBtn = document.getElementById("noBtn");
+<p id="loveResponse"></p>
 
+</div>
+</section>
+
+<!-- LOVE SLIDER -->
+<section>
+<div class="container">
+<h2>How Much Do You Love Me? 😌</h2>
+<input type="range" min="0" max="100" value="70" class="slider" id="loveSlider">
+<p id="sliderOutput"></p>
+</div>
+</section>
+
+<!-- MINI GAMES -->
+<section>
+<div class="container">
+<h2>Mini Games For My Fairy 🧚‍♀️</h2>
+
+<button class="primary" onclick="startHeartGame()">Catch My Heart 💖</button>
+<button class="primary" onclick="vampireQuiz()">Mr. Vampire Quiz 🧛‍♂️</button>
+<button class="primary" onclick="generateCompliment()">Generate Corny Compliment ✨</button>
+
+<p id="gameOutput"></p>
+<p id="scoreText"></p>
+
+</div>
+</section>
+
+<script>
+
+// RUNAWAY NO BUTTON
+const noBtn = document.getElementById("noBtn");
 noBtn.addEventListener("mouseover", function() {
-    const x = Math.random() * 200 - 100;
-    const y = Math.random() * 200 - 100;
+    const x = Math.random()*300 - 150;
+    const y = Math.random()*300 - 150;
     noBtn.style.transform = `translate(${x}px, ${y}px)`;
 });
 
-function showLove() {
-    document.getElementById("loveMessage").style.display = "block";
+// ACCEPT LOVE
+function acceptLove() {
     document.getElementById("loveFill").style.width = "100%";
-    createHearts();
+    document.getElementById("loveResponse").innerText =
+    "Correct. Ghadoush supremacy confirmed. Mr. Vampire has been defeated. 💘";
+    explodeHearts();
 }
 
-function createHearts() {
-    for (let i = 0; i < 30; i++) {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.innerHTML = "💖";
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-        document.body.appendChild(heart);
-
-        setTimeout(() => {
-            heart.remove();
-        }, 5000);
+// SLIDER DRAMA
+const slider = document.getElementById("loveSlider");
+slider.oninput = function(){
+    const value = this.value;
+    if(value < 30){
+        sliderOutput.innerText = "Suspicious answer detected.";
+    } else if(value < 70){
+        sliderOutput.innerText = "Acceptable. But we can improve.";
+    } else {
+        sliderOutput.innerText = "Elite love levels. Approved.";
     }
 }
+
+// COMPLIMENT GENERATOR
+function generateCompliment(){
+    const list = [
+        "You're cuter than 1,000 baby pandas.",
+        "Even Mr. Vampire is scared of how much I love you.",
+        "You glow brighter than my screen at 3AM.",
+        "You are illegally adorable, Ghadoush.",
+        "If perfection had a face, it would be yours."
+    ];
+    gameOutput.innerText = list[Math.floor(Math.random()*list.length)];
+}
+
+// VAMPIRE QUIZ
+function vampireQuiz(){
+    const answer = prompt("Who owns my heart?\n1) Ghadoush\n2) Mr. Vampire\n3) Random person");
+    if(answer === "1"){
+        gameOutput.innerText = "Correct. Ghadoush owns it permanently.";
+    } else {
+        gameOutput.innerText = "Wrong. Mr. Vampire has been rejected.";
+    }
+}
+
+// HEART GAME
+let score = 0;
+function startHeartGame(){
+    score = 0;
+    scoreText.innerText = "Score: 0";
+    for(let i=0;i<15;i++){
+        createHeart();
+    }
+}
+
+function createHeart(){
+    const heart = document.createElement("div");
+    heart.innerHTML = "💖";
+    heart.classList.add("heart");
+    heart.style.left = Math.random()*100+"vw";
+    heart.style.animationDuration = (Math.random()*4+3)+"s";
+    document.body.appendChild(heart);
+
+    heart.onclick = function(){
+        score++;
+        scoreText.innerText = "Score: " + score + " (You caught my heart 😳)";
+        heart.remove();
+    }
+    setTimeout(()=>heart.remove(),7000);
+}
+
+// HEART EXPLOSION
+function explodeHearts(){
+    for(let i=0;i<40;i++){
+        createHeart();
+    }
+}
+
+// BACKGROUND FLOATING HEARTS
+setInterval(()=>{
+    const heart = document.createElement("div");
+    heart.innerHTML="💗";
+    heart.classList.add("heart");
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.animationDuration="8s";
+    document.body.appendChild(heart);
+    setTimeout(()=>heart.remove(),8000);
+},1500);
+
 </script>
 
 </body>
